amqp/1.9/modules/ROOT/pages/amqp-documentation.adoc
= AMQP Connector 1.9 Reference 
:page-aliases: connectors::amqp/amqp-documentation.adoc


Release Notes: xref:release-notes::connector/connector-amqp.adoc[AMQP Connector Release Notes]

Anypoint Connector for AMQP is an AMQP 0.9.1 compliant MuleSoft extension, and is used to consume and produce AMQP messages. The extension supports AMQP functionality including exchanges and queues, consumers, acknowledgment modes, and local transactions.

== Configurations
---
[[config]]
=== Config


These are the base configuration parameters for AMQP Connector.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<config_connection, Connection>>
 | The connection types to provide to this configuration. | | x
| Encoding a| String |  The default encoding of the Message body to use if the message doesn't communicate it. |  | 
| Content Type a| String |  The default contentType of the Message body to use if the message doesn't communicate it |  */* | 
| Create Fallback Queue a| Boolean | Whether to create non-existing queues according to the fallback definition if they are defined. |  true | 
| Create Fallback Exchange a| Boolean | Whether to create non-existing exchanges according to the fallback definition if they are defined. |  true | 
| Send Correlation Id a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Whether to specify a correlationId when publishing messages. This applies both for custom correlation IDs specifies at the operation level and for default correlation IDs taken from the current event |  AUTO | 
| Name a| String |  The identifier of this element used to reference it in other components. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.   |  | 
| Ack Mode a| Enumeration, one of:

** IMMEDIATE
** AUTO
** MANUAL |  The acknowledgment mode to use when consuming from the AMQP broker. If a transaction is opened in the channel, message acknowledgment is handled automatically by commit, and recovery is handled automatically by rollback. |  IMMEDIATE | 
| No Local a| Boolean |  If set to true, the server does not send messages to the connection that published them. |  false | 
| Exclusive Consumers a| Boolean |  Set to true if the connector should only create exclusive consumers. Only the consumer created can access the queue. |  false | 
| Number Of Consumers a| Number |  It is the number of consumers spawned by message source to receive AMQP messages. Each consumer will create a channel. |  4 | 
| Delivery Mode a| Enumeration, one of:

** TRANSIENT
** PERSISTENT |  The delivery mode to use when publishing to the AMQP broker. |  PERSISTENT | 
| Priority a| Number |  The priority to use when publishing to the AMQP broker. The priority has possible values from 0 to 9 - default is 0. |  0 | 
| Request Broker Confirms a| Boolean |  Whether it must fail in case no confirmation is provided. |  false | 
| Mandatory a| Boolean |  Whether the operation must fail if it cannot be routed to a queue. |  false | 
| Immediate a| Boolean |  Whether the operation must fail if it cannot be routed to a queue consumer immediately. |  false | 
| Returned Message Exchange a| String |  The exchange to publish returned messages. |  | 
| Prefetch Size a| Number |  This field defines a prefetch size window. The broker will send as much messages as possible without exceeding the prefetchSize window in octets (bytes). 0 is used for no specific limit. |  0 | 
| Prefetch Count a| Number |  Specifies a global prefetch window in terms of whole messages. This field may be used in combination with the prefetch-size field; a message will only be sent in advance if both prefetch windows allow it. 0 is used for no specific limit. |  0 | 
|===

==== Connection Types
[[config_connection]]
===== Connection


Generic implementation of a AMQP ConnectionProvider.


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Socket Configuration a| <<SocketConfiguration>> |  |  | 
| TLS Configuration a| <<Tls>> |  Reference to a TLS config element. This will enable secure connection to the AMQP broker. |  | 
| Host a| String |  Host of the broker to connect to. |  | x
| Port a| Number |  Port of the AMQP broker to connect to. |  | 
| Virtual Host a| String |  Virtual host to use in the AMQP broker. |  / | 
| Username a| String |  Username to use when providing credentials for authentication. |  | 
| Password a| String |  Password to use when providing credentials for authentication. |  | 
| Use Tls a| Boolean |  Whether TLS is needed to use. In case it is not provided, the default for AMQP connection will be used. |  false | 
| Use Sni a| Boolean |  Whether Server Name Indication is needed to use in the ClientHello Message |  false | 
| Use Sasl a| Boolean |  Whether SASL (EXTERNAL) Auth mechanism is used (No username or password required). |  false | 
| Heartbeat Timeout a| Number |  The heartbeat timeout. Heartbeat frames is sent at about 1/2 the timeout interval. |  60 | 
| Handshake Timeout a| Number |  AMQP 0.9.1 timeout to set to the underlying AMQP connector. |  | 
| Handshake Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Timeunit for the handshake timeout AMQP connection socket configuration. |  MILLISECONDS | 
| Fallback Addresses a| Array of <<fallback-address>> |  The addresses of the broker nodes to attempt connection to, should the connection to main broker fail. |  | 
| Max Inbound Message Body Size a| Number |  The maximum inbound message body size to set to the underlying AMQP Connector in bytes. |  67108864 (64 MB) | 
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy |  | 
|===

== Supported Operations
* <<consume>> 
* <<publish>> 
* <<publishConsume>> 

== Associated Sources
* <<listener>> 


== Operations

[[consume]]
=== Consume
`<amqp:consume>`


Enables you to consume a single AMQP message from a given queue.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Queue Name a| String |  The name of the queue from where the Message should be consumed |  | x
| Content Type a| String |  The content type of the message body |  | 
| Encoding a| String |  The encoding of the message body |  | 
| Fallback Queue Definition a| <<queue-definition>> |  The queue definition to use for queue declaration in case there is no queue with the queueName |  | 
| Ack Mode a| Enumeration, one of:

** IMMEDIATE
** MANUAL |  The ACK mode to use when consuming a message |  | 
| Consumer Tag a| String |  The consumer tag to use for the consumer involved in the operation |  | 
| Maximum Wait a| Number |  Maximum time to wait for a message to arrive before timeout |  10000 | 
| Maximum Wait Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the maximumWaitTime configuration |  MILLISECONDS | 
| Create Fallback Queue a| Boolean |  |  | 
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  information of the current transaction in case it exists |  JOIN_IF_POSSIBLE | 
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<AmqpAttributes>>
|===

=== For Configurations
* <<config>> 

==== Throws
* AMQP:QUEUE_NOT_FOUND 
* AMQP:CONNECTIVITY 
* AMQP:CONSUMING 
* AMQP:NO_CHANNEL_AVAILABLE 
* AMQP:RETRY_EXHAUSTED 
* AMQP:CREATION_NOT_ALLOWED 
* AMQP:TIMEOUT 


[[publish]]
=== Publish
`<amqp:publish>`


Enables you to publish a single AMQP message to a given exchange.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Exchange Name a| String |  The name of the exchange to publish the message to |   | 
| Routing Keys a| Array of String |  List of routing keys to use when publishing messages. |  | 
| Delivery Mode a| Enumeration, one of:

** TRANSIENT
** PERSISTENT |  The delivery mode to use when publishing to the AMQP broker |  | 
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  information of the current transaction in case it exists |  JOIN_IF_POSSIBLE | 
| Send Correlation Id a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  options on whether to include an outbound correlation ID or not |  | 
| Create Fallback Exchange a| Boolean |  |  | 
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component. |  | x
| Skip Exchange Validation a| Enumeration, one of:

** YES |  Skips the exchange validation. +
 By default, the *Publish* operation validates the exchange if you do not configure the Skip Exchange Validation field. While skipping validation can enhance performance, this approach also risks message loss if the exchange does not exist, depending on the broker's configuration. |  | 
| Fallback Exchange Definition a| <<exchange-defintiion>> |  The exchange to use for exchange declaration in case there is no exchange with the exchangeName |  | 
| Body a| Any |  The body of the Message |  `#[payload]` | 
| AMQP Properties a| <<AmqpProperties>> |  Properties of the message. |  | 
| Headers a| Object |  The custom user properties that should be set to this AmqpMessage |  | 
| Request Broker Confirms a| Boolean |  Expects a confirmation from a message published. An exception is raised in case no confirmation is provided in case this attribute is set to true. |  false | 
| Mandatory a| Boolean |  Tells the server how to react if the message cannot be routed to a queue. If set to true, the server throws an exception (UNROUTABLE_MESSAGE, see below in the operation spec) for any message that cannot be routed. If set to false, the server silently drops the message. |  false | 
| Immediate a| Boolean |  Tells the server how to react if the message cannot be routed to a queue consumer immediately. If set to true, the server throws an exception (UNROUTABLE_MESSAGE, see below in the operation spec) for any undeliverable message. If set to false, the server queues the message, but with no guarantee that the message will ever be consumed. |  false | 
| Returned Message Exchange a| String |  The exchange to publish returned messages. |  | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors. |  | 
|===


=== For Configurations
* <<config>> 

==== Throws
* AMQP:PUBLISHING 
* AMQP:ILLEGAL_BODY 
* AMQP:CONNECTIVITY 
* AMQP:UNROUTABLE_MESSAGE 
* AMQP:EXCHANGE_NOT_FOUND 
* AMQP:NO_CHANNEL_AVAILABLE 
* AMQP:RETRY_EXHAUSTED 
* AMQP:CREATION_NOT_ALLOWED 


[[publishConsume]]
=== Publish Consume
`<amqp:publish-consume>`


Enables you to send a message to a AMQP exchange and waits for a response either to the provided replyTo destination or to a temporary destination created dynamically.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Exchange Name a| String |  The name of the exchange to publish the message to |  | x
| Content Type a| String |  The content type of the message body |  | 
| Encoding a| String |  The encoding of the message body |  | 
| Routing Key a| String |  The routing key to publish to in publish-consume operations. |  | 
| Delivery Mode a| Enumeration, one of:

** TRANSIENT
** PERSISTENT |  The delivery mode to use when publishing to the AMQP broker |  | 
| Maximum Wait a| Number |  The maximum time to wait for a message to arrive before timeout |  10000 | 
| Maximum Wait Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit to use in the maximumWaitTime configuration |  MILLISECONDS | 
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  information of the current transaction in case it exists |  JOIN_IF_POSSIBLE | 
| Send Correlation Id a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  options on whether to include an outbound correlation ID or not |  | 
| Create Fallback Exchange a| Boolean |  |  | 
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Skip Exchange Validation a| Enumeration, one of:

** YES |  This field is intended to skip exchange validation by default the operation will do the validation if the parameter is not configured. If you decide to skip the exchange validation it will improve the performance but if the exchange does not exist you can incur in messaging losing depending on the broker configuration. |  | 
| Fallback Exchange Definition a| <<exchange-defintiion>> |  The exchange to use for exchange declaration in case there is no exchange with the exchangeName |  | 
| Body a| Any |  The body of the Message |  `#[payload]` | 
| AMQP Properties a| <<AmqpProperties>> |  Properties of the message. |  | 
| Headers a| Object |  The custom user properties that should be set to this AmqpMessage |  | 
| Request Broker Confirms a| Boolean |  Expects a confirmation from a message published. An exception is raised in case no confirmation is provided in case this attribute is set to true. |  false | 
| Mandatory a| Boolean |  Tells the server how to react if the message cannot be routed to a queue. If set to true, the server throws an exception (UNROUTABLE_MESSAGE, see below in the operation spec) for any message that cannot be routed. If set to false, the server silently drops the message. |  false | 
| Immediate a| Boolean |  Tells the server how to react if the message cannot be routed to a queue consumer immediately. If set to true, the server throws an exception (UNROUTABLE_MESSAGE, see below in the operation spec) for any undeliverable message. If set to false, the server queues the message, but with no guarantee that the message will ever be consumed. |  false | 
| Returned Message Exchange a| String |  The exchange to publish returned messages. |  | 
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  | 
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<AmqpAttributes>>
|===

=== For Configurations
* <<config>> 

==== Throws
* AMQP:PUBLISHING 
* AMQP:PUBLISHING_CONSUMING 
* AMQP:CONNECTIVITY 
* AMQP:CONSUMING 
* AMQP:NO_CHANNEL_AVAILABLE 
* AMQP:RETRY_EXHAUSTED 
* AMQP:CREATION_NOT_ALLOWED 
* AMQP:TIMEOUT 


[[ack]]
=== Ack
`<amqp:ack>`

Enables to ack a message with the delivery tag.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Ack Id a| String |  delivery tag of the message to be ack'ed |  | x
|===

==== Throws
* AMQP:ACKNOWLEDGING 
* AMQP:NO_CHANNEL_AVAILABLE 
* AMQP:DELIVER_TAG_NOT_FOUND 
* AMQP:TIMEOUT 


[[reject]]
=== Reject
`<amqp:reject>`


Enables you to reject a delivered AMQP message.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Ack Id a| String |  delivery tag of the message to be rejected |  | x
| Requeue a| Boolean |  Indicates whether the rejected message has to be requeued |  false | 
|===



==== Throws
* AMQP:REQUEUE 
* AMQP:ACKNOWLEDGING 
* AMQP:REJECTING 
* AMQP:DELIVER_TAG_NOT_FOUND 
* AMQP:TIMEOUT 


== Sources

[[listener]]
=== Listener
`<amqp:listener>`


AMQP listener for queues, enables you to listen for incoming messages.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Queue Name a| String |  Name of the queue to consume from. |  | x
| Fallback Queue Definition a| <<queue-definition>> |  Declaration of a queue definition to use in case no queue with the queueName provided exists in the broker. In case the queue with provided queueName exists, it will be used as is, ignoring the fallback. In case the queue does not exist, a new queue shall be created according to the referenced definition. |  | 
| Ack Mode a| Enumeration, one of:

** IMMEDIATE
** AUTO
** MANUAL |  The acknowledgment mode to use when consuming from the AMQP broker. |  | 
| Number Of Consumers a| Number |  The number of channels that are spawned per inbound endpoint to receive AMQP messages. |  | 
| Consumer Tag a| String |  A client-generated consumer tag to establish context. |  | 
| Recover Strategy a| Enumeration, one of:

** NONE
** NO_REQUEUE
** REQUEUE |  Valid values for the recoverStrategy option are: NONE, NO_REQUEUE and REQUEUE. |  REQUEUE | 
| Inbound Encoding a| String |  The default encoding of the message body to use if the message doesn't communicate it |  | 
| Inbound Content Type a| String |  The default contentType of the Message body to use if the message doesn't communicate it |  | 
| Create Fallback Queue a| Boolean |  Whether non existing queues will be created according to the fallback definition or an error is raised if they do not exist. This can be disabled in the mule app is not intended to change the AMQP topography. |  | 
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component. |  | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_BEGIN
** NONE |  The type of beginning action that sources can take regarding transactions. |  NONE | 
| Transaction Type a| Enumeration, one of:

** LOCAL
** XA |  The type of transaction to create. Availability depends on Mule version. |  LOCAL | 
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  | 
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  | 
| Prefetch Size a| Number |  This field defines a prefetch size window. The broker will send as much messages as possible without exceeding the prefetchSize window in octets (bytes). 0 is used for no specific limit. |  | 
| Prefetch Count a| Number |  Specifies a global prefetch window in terms of whole messages. This field may be used in combination with the prefetch-size field; a message will only be sent in advance if both prefetch windows allow it. 0 is used for no specific limit. |  | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors. |  | 
| Body a| Any |  The body of the Message |  `#[payload]` | 
| AMQP Properties a| <<AmqpProperties>> |  Properties of the message. |  | 
| Headers a| Object |  The custom user properties that should be set to this AmqpMessage |  | 
| Delivery Mode a| Enumeration, one of:

** TRANSIENT
** PERSISTENT |  The delivery mode to use when publishing to the AMQP broker. |  PERSISTENT | 
| Priority a| Number |  The priority to use when publishing to the AMQP broker. The priority has possible values from 0 to 9 - default is 0. |  0 | 
| Request Broker Confirms a| Boolean |  Whether it must fail in case no confirmation is provided in case this attribute is set to true." |  false | 
| Mandatory a| Boolean |  Whether the operation must fail if it cannot be routed to a queue. |  false | 
| Immediate a| Boolean |  Whether the operation must fail if it cannot be routed to a queue consumer immediately. |  false | 
| Returned Message Exchange a| String |  The exchange to publish returned messages. |  | 
|===

==== Output
[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<AmqpAttributes>>
|===

=== For Configurations
* <<config>> 



== Types
[[SocketConfiguration]]
=== Socket Configuration

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Keep Alive a| Boolean | Keep alive to set to the underlying AMQP connector | false | 
| So Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Timeunit for the SO_TIMEOUT AMQP connection socket configuration. | MILLISECONDS | 
| So Timeout a| Number | SO_TIMEOUT to set to the underlying AMQP connector. |  | 
| Receive Buffer Size a| Number | Receive buffer size to set to the underlying AMQP connector |  | 
| Send Buffer Size a| Number | Send buffer size to set to the underlying AMQP connector |  | 
|===

[[Tls]]
=== TLS

Configures TLS to provide secure communications for the Mule app.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | Comma-separated list of protocols enabled for this context. |  | 
| Enabled Cipher Suites a| String | Comma-separated list of cipher suites enabled for this context. |  | 
| Trust Store a| <<TrustStore>> | Configures the TLS truststore. |  | 
| Key Store a| <<KeyStore>> | Configures the TLS keystore. |  | 
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  | 
|===

[[TrustStore]]
=== Truststore

Configures the truststore for TLS.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system. |  | 
| Password a| String | Password used to protect the truststore. |  | 
| Type a| String | Type of store. |  | 
| Algorithm a| String | Encryption algorithm that the truststore uses. |  | 
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  | 
|===

[[KeyStore]]
=== Keystore

Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the keystore. Mule resolves the path relative to the current classpath and file system. |  | 
| Type a| String | Type of store. |  | 
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  | 
| Key Password a| String | Password used to protect the private key. |  | 
| Password a| String | Password used to protect the keystore. |  | 
| Algorithm a| String | Encryption algorithm that the keystore uses. |  | 
|===

[[standard-revocation-check]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Which elements to verify in the certificate chain:

* `true`

Verify only the last element in the certificate chain.

* `false`

Verify all elements in the certificate chain. |  | 
| Prefer Crls a| Boolean | How to check certificate validity:

* `true`

Check the Certification Revocation List (CRL) for certificate validity.

* `false`

Use the Online Certificate Status Protocol (OCSP) to check certificate validity. |  | 
| No Fallback a| Boolean | Whether to use the secondary method to check certificate validity:

* `true`

Use the method that wasn't specified in the *Prefer Crls* field (the secondary method) to check certificate validity.

* `false`

Do not use the secondary method to check certificate validity. |  | 
| Soft Fail a| Boolean | What to do if the revocation server can't be reached or is busy:

* `true`

Avoid verification failure.

* `false`

Allow the verification to fail. |  | 
|===

[[custom-ocsp-responder]]
=== Custom OCSP Responder

Configures a custom OCSP responder for certification revocation checks.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | URL of the OCSP responder. |  | 
| Cert Alias a| String | Alias of the signing certificate for the OCSP response. If specified, the alias must be in the truststore. |  | 
|===

[[crl-file]]
=== CRL File

Specifies the location of the certification revocation list (CRL) file.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the CRL file. |  | 
|===

[[fallback-address]]
=== Fallback Address

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | Host of the broker to connect to. |  | x
| Port a| String | Port of the AMQP broker to connect to. |  | 
|===

=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | Reconnection strategy to use. |  | 
|===

[[reconnect]]
=== Reconnect

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  | 
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. |  | 
| Count a| Number | How many reconnection attempts the Mule app can make. |  | 
|===

[[reconnect-forever]]
=== Reconnect Forever

Configures a forever reconnection strategy by which the connector source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  | 
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. |  | 
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  | 
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  | 
|===

[[AmqpAttributes]]
=== AMQP Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Envelope a| <<Envelope>> | Encapsulates a group of parameters used for AMQP's Basic methods |  | x
| Properties a| <<Properties>> | AMQP Message Properties |  | x
| Headers a| Object | AMQP Message parameters |  | x
| Ack Id a| String | The channel ACK ID required to ACK a the current Message if one is available, or null otherwise. |  | 
|===

[[Envelope]]
=== Envelope

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Delivery Tag a| Number |  |  | 
| Redeliver a| Boolean |  | false | 
| Exchange a| String |  |  | 
| Routing Key a| String |  |  | 
|===

[[Properties]]
=== Properties

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Content Type a| String |  |  | 
| Content Encoding a| String |  |  | 
| Delivery Mode a| Enumeration, one of:

** TRANSIENT
** PERSISTENT |  | PERSISTENT | 
| Priority a| Number |  |  | 
| Correlation Id a| String |  |  | 
| Reply To a| String |  |  | 
| Expiration a| String |  |  | 
| Message Id a| String |  |  | 
| Timestamp a| Date |  |  | 
| Type a| String |  |  | 
| User Id a| String |  |  | 
| App Id a| String |  |  | 
| Cluster Id a| String |  |  | 
|===

[[queue-definition]]
=== Queue Definition

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Removal Strategy a| Enumeration, one of:

** EXPLICIT
** SHUTDOWN
** UNUSED | Defines when the declared queue must be removed from the broker. | EXPLICIT | 
| Exchange To Bind a| String | Defines the exchange to bind the queue to. |  | 
| Binding Routing Key a| String | Defines the routing key to use in the binding of the exchange. |  | 
|===

[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

Configures the in-memory streaming strategy by which the request fails if the data exceeds the MAX buffer size. Always run performance tests to find the optimal buffer size for your specific use case.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | Initial amount of memory to allocate to the data stream. If the streamed data exceeds this value, the buffer expands by *Buffer Size Increment*, with an upper limit of *Max In Memory Size value*. |  | 
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  | 
| Max Buffer Size a| Number | Maximum size of the buffer. If the buffer size exceeds this value, Mule raises a `STREAM_MAXIMUM_SIZE_EXCEEDED` error. A value of less than or equal to `0` means no limit. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *Initial Buffer Size*, *Buffer Size Increment*, and *Buffer Unit* fields. |  | 
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

Configures the repeatable file-store streaming strategy by which Mule keeps a portion of the stream content in memory. If the stream content is larger than the configured buffer size, Mule backs up the buffer's content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Maximum amount of memory that the stream can use for data. If the amount of memory exceeds this value, Mule buffers the content to disk. To optimize performance:

* Configure a larger buffer size to avoid the number of times Mule needs to write the buffer on disk. This increases performance, but it also limits the number of concurrent requests your application can process, because it requires additional memory.

* Configure a smaller buffer size to decrease memory load at the expense of response time. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *In Memory Size* field. |  | 
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

Configures the redelivery policy for executing requests that generate errors. You can add a redelivery policy to any source in a flow.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | Maximum number of times that a redelivered request can be processed unsuccessfully before returning a REDELIVERY_EXHAUSTED error. |  | 
| Message Digest Algorithm a| String | Secure hashing algorithm to use. If not set, the default is SHA-256. If the payload of the message is a Java object, Mule ignores this value and returns the value that the payload's `hashCode()` returned. |  | 
| Message Identifier a| <<RedeliveryPolicyMessageIdentifier>> | Defines which strategy is used to identify the messages. |  | 
| Object Store a| Object Store | Configures the object store that stores the redelivery counter for each message. |  | 
|===

[[RedeliveryPolicyMessageIdentifier]]
=== Redelivery Policy Message Identifier

Configures the message identifier strategy for the redelivery policy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Use Secure Hash a| Boolean | If `true`, Mule uses a secure hash algorithm to identify a redelivered message. |  | 
| Id Expression a| String | One or more expressions that determine when a message was redelivered. You can set this property only if the *Use Secure Hash* field is `false`. |  | 
|===

[[AmqpProperties]]
=== AMQP Properties

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Content Type a| String | The content type of the body | */* | 
| Content Encoding a| String | The Content Encoding of the published Message |  | 
| Priority a| Number | The priority to use when publishing to the AMQP broker. The priority has possible values from 0 to 9 - default is 0. | 0 | 
| Correlation Id a| String | Used in case of implementation of RPC pattern to distinguish among messages in a request-reply. |  | 
| Message Id a| String |  |  | 
| Reply To a| String | Destination set in case of RPC. |  | 
| Expiration a| Number | Expiration in miliseconds for the message. |  | 
| Expiration Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  | MILLISECONDS | 
| User Id a| String |  |  | 
| App Id a| String |  |  | 
| Cluster Id a| String |  |  | 
| Timestamp a| Date |  |  | 
| Type a| String | Type of the consumed message |  | 
|===

[[exchange-defintiion]]
=== Exchange Defintiion

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Removal Strategy a| Enumeration, one of:

** EXPLICIT
** SHUTDOWN
** UNUSED | Defines when the declared exchange must be removed from the broker. | EXPLICIT | 
| Type a| Enumeration, one of:

** DIRECT
** TOPIC
** FANOUT
** HEADERS | The type of exchange to be declared. | FANOUT | 
|===
